--- a/game/css/stockmarket.css
+++ b/game/css/stockmarket.css
@@ -20,6 +20,19 @@ td:nth-child(n+8) {
     padding: 5px;
 }
 
+.chart {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+  
+.canvas {
+    width: 30%;
+    height: 30%;
+}
+
 .positive {
     color: green;
 }
@@ -27,6 +40,7 @@ td:nth-child(n+8) {
 .negative {
     color: red;
 }
+
 .stock-button {
     width: 100%;
     height: 42px;
@@ -40,4 +54,80 @@ td:nth-child(n+8) {
 
 .stock-button:active {
     background-color: #d3821f;
+}
+
+.buysell {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.stock-button-drop {
+    width: 100px;
+    height: 42px;
+    border: 0;
+    background-color: #FFA12D;
+    margin: 5px 10px;
+}
+
+.stock-button-drop:hover {
+    background-color: #ffba66;
+}
+
+.stock-button-drop:active {
+    background-color: #d3821f;
+}
+
+.input-number {
+    box-sizing: border-box;
+    width: 80px;
+    padding: 0 12px;
+    vertical-align: top;
+    text-align: center;
+    outline: none;
+}
+
+.input-number,
+.input-number-decrement,
+.input-number-increment {
+    border: 1px solid #ecc28e;
+    height: 40px;
+    user-select: none;
+    background-color: #ecc28e;
+}
+
+.input-number-decrement,
+.input-number-increment {
+    display: inline-block;
+    width: 30px;
+    line-height: 38px;
+    background: #f1f1f1;
+    color: #444;
+    text-align: center;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.input-number-decrement:active,
+.input-number-increment:active {
+    background: #d3821f;
+}
+
+.input-number-decrement:hover,
+.input-number-increment:hover {
+    background: #ffba66;
+}
+
+.input-number-decrement {
+    border-right: none;
+    border-radius: 4px 0 0 4px;
+    border: 0;
+    background-color: #FFA12D;
+}
+
+.input-number-increment {
+    border-left: none;
+    border-radius: 0 4px 4px 0;
+    border: 0;
+    background-color: #FFA12D;
 }
