--- a/game/css/infobar.css
+++ b/game/css/infobar.css
@@ -16,9 +16,10 @@
 }
 
 #map-select {
+    position: absolute;
     left: 0;
     width: 55px;
-    height: 100%;
+    height: 100px;
     background-color: #ccc;
     border-top-right-radius: 50px;
     border-bottom-right-radius: 50px;
@@ -39,13 +40,15 @@
 #map-button a {
     font-size: 32px;
     margin: 0;
-    transform: translateX(-5px);
+    padding: 10px;
+    transform: translateX(-10px);
     text-decoration: none;
     color: #000;
     transition: all 0.3s ease-in-out;
 }
 
 #map-button a:hover {
+    color: #FFA12D;
     transform: translateX(0px);
 }
   
