--- a/game/css/infobar.css
+++ b/game/css/infobar.css
@@ -1,6 +1,8 @@
 .info {
     width: 100%;
     height: 100px;
+    min-height: 100px;
+    max-height: 100px;
     background-color: #222;
     display: flex;
     align-items: center;
@@ -18,11 +20,8 @@
 #map-select {
     position: absolute;
     left: 0;
-    width: 55px;
+    width: 150px;
     height: 100px;
-    background-color: #ccc;
-    border-top-right-radius: 50px;
-    border-bottom-right-radius: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -35,21 +34,23 @@
     justify-content: center;
     align-items: center;
     height: inherit;
+    transition: all 0.3s ease-in-out;
 }
   
 #map-button a {
     font-size: 32px;
     margin: 0;
     padding: 10px;
-    transform: translateX(-10px);
     text-decoration: none;
-    color: #000;
+    color: #f5f5f5;
     transition: all 0.3s ease-in-out;
 }
 
+#map-button:hover {
+    padding-left: 15px;
+}
 #map-button a:hover {
     color: #FFA12D;
-    transform: translateX(0px);
 }
   
   
