Shop Starting to take shape

--- a/game/css/map.css
+++ b/game/css/map.css
@@ -58,3 +58,8 @@
     left: calc(100px + 200px);
     top: calc(100px + 100px);
 }
+
+#marker-4 {
+    left: calc(100px + 500px);
+    top: calc(100px + 300px);
+}
