--- a/game/css/map/map_space.css
+++ b/game/css/map/map_space.css
@@ -45,26 +45,57 @@
 }
 
 #marker-1 {
-    left: calc(100px + 500px);
+    left: calc(100px + 100px);
+    top: calc(100px + 100px);
+}
+
+#marker-1 {
+    left: calc(100px + 100px);
     top: calc(100px + 100px);
 }
 
 #marker-2 {
-    left: calc(100px + 200px);
-    top: calc(100px + 300px);
+    left: calc(100px + 100px);
+    top: calc(100px + 200px);
 }
 
 #marker-3 {
-    left: calc(100px + 200px);
-    top: calc(100px + 100px);
+    left: calc(100px + 100px);
+    top: calc(100px + 300px);
 }
 
 #marker-4 {
-    left: calc(100px + 500px);
-    top: calc(100px + 300px);
+    left: calc(100px + 100px);
+    top: calc(100px + 400px);
 }
 
 #marker-5 {
-    left: calc(100px + 1200px);
+    left: calc(100px + 300px);
+    top: calc(100px + 100px);
+}
+
+#marker-6 {
+    left: calc(100px + 300px);
+    top: calc(100px + 200px);
+}
+
+#marker-7 {
+    left: calc(100px + 300px);
     top: calc(100px + 300px);
 }
+
+#marker-8 {
+    left: calc(100px + 300px);
+    top: calc(100px + 400px);
+}
+
+#marker-9 {
+    left: calc(100px + 500px);
+    top: calc(100px + 100px);
+}
+
+#marker-10 {
+    left: calc(100px + 500px);
+    top: calc(100px + 200px);
+}
+
