Fixed map background streching

--- a/game/css/map/map_space.css
+++ b/game/css/map/map_space.css
@@ -14,19 +14,24 @@
     position: relative;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-size: cover;
     background-position: center;
-    background-repeat: no-repeat;
+    background-repeat:space;
     user-select: none;
     -webkit-user-drag: none;
     user-select: none;
     -moz-user-select: none;
     -webkit-user-select: none;
     -ms-user-select: none;
-    cursor: grab;
     overflow: hidden;
+}
+
+@media (max-width: 500px) {
+    #map {
+        transform: rotate(90deg);
+    }
 }
 
 .marker-button {
@@ -216,4 +221,3 @@
     filter: drop-shadow(0 0 20px #222222);
     transform: scale(1.1);
 }
-
