--- a/game/css/infobar.css
+++ b/game/css/infobar.css
@@ -6,6 +6,8 @@
     background-color: #222;
     display: flex;
     align-items: center;
+    position: -webkit-sticky;
+    position: sticky;
 }
   
 #info-div {
