--- a/game/css/shop_buy.css
+++ b/game/css/shop_buy.css
@@ -18,7 +18,7 @@
 
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 20px;
     margin: 20px;
 }
@@ -63,4 +63,131 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
+}
+
+.popup {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 999;
+}
+  
+.popup-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #222;
+    border-radius: 5px;
+    padding: 20px 30px;
+    min-width: 200px;
+    max-width: 500px;
+    max-height: 80vh;
+    overflow-y: auto;
+    text-align: center;
+    color: #FFA12D;
+    border: solid 3px #FFA12D;
+}
+  
+.popup-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#popup-title {
+    margin-right: 50px;
+}
+  
+.close-btn {
+    font-size: 24px;
+    cursor: pointer;
+}
+  
+.popup-body img {
+    height: 64px;
+    width: 64px;
+    image-rendering: crisp-edges;
+    object-fit: contain;
+    margin: 20px 0;
+}
+
+.input-number {
+    box-sizing: border-box;
+    width: 80px;
+    padding: 0 12px;
+    vertical-align: top;
+    text-align: center;
+    outline: none;
+}
+
+.input-number,
+.input-number-decrement,
+.input-number-increment {
+    border: 1px solid #ecc28e;
+    height: 40px;
+    user-select: none;
+    background-color: #ecc28e;
+    font-weight: bold;
+}
+
+.input-number-decrement,
+.input-number-increment {
+    display: inline-block;
+    width: 30px;
+    line-height: 38px;
+    background: #f1f1f1;
+    color: #444;
+    text-align: center;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.input-number-decrement:active,
+.input-number-increment:active {
+    background: #d3821f;
+}
+
+.input-number-decrement:hover,
+.input-number-increment:hover {
+    background: #ffba66;
+}
+
+.input-number-decrement {
+    border-right: none;
+    border-radius: 4px 0 0 4px;
+    border: 0;
+    background-color: #FFA12D;
+}
+
+.input-number-increment {
+    border-left: none;
+    border-radius: 0 4px 4px 0;
+    border: 0;
+    background-color: #FFA12D;
+}
+
+#buy-item {
+    display: block;
+    align-items: center;
+    margin: 0 auto;
+    margin-top: 20px;
+    width: 100%;
+    max-width: 175px;
+    height: 3em;
+    border: solid 2px #FFA12D;
+    border-radius: 5px;
+    background-color: #ecc28e;
+    color: #444;
+    font-weight: bold;
+    transition: all 0.2s ease-in-out;
+}
+
+#buy-item:hover {
+    cursor: pointer;
+    background-color: #FFA12D;
 }
